--- a/nextjs/values.yaml
+++ b/nextjs/values.yaml
@@ -17,7 +17,7 @@ service:
   noneclusterip: true
 
 ingress:
-  enabled: false
+  enabled: true
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
@@ -40,7 +40,7 @@ resources:
 
 autoscaling:
   enabled: true
-  minReplicas: 1
+  minReplicas: 2
   maxReplicas: 5
   targetNginxReqPerSec: 200
   # targetCPUUtilizationPercentage: 80
