--- a/prometheus-operator/values.yaml
+++ b/prometheus-operator/values.yaml
@@ -2070,3 +2070,16 @@ prometheus-operator:
       ## https://github.com/coreos/prometheus-operator/blob/master/Documentation/api.md#podmetricsendpoint
       ##
       # podMetricsEndpoints: []
+
+grafanaIngress:
+  appName: prometheus-operator-grafana
+  namespaces: default
+  enabled: true
+  annotations:
+    kubernetes.io/ingress.class: "nginx"
+    nginx.ingress.kubernetes.io/ssl-redirect: "false"
+    nginx.ingress.kubernetes.io/rewrite-target: /$1
+  hosts:
+    - host: localhost
+      path: /?(.*)
+  tls: []
