--- a/prometheus-operator/Chart.yaml
+++ b/prometheus-operator/Chart.yaml
@@ -1,25 +1,19 @@
 apiVersion: v1
 description: Provides easy monitoring definitions for Kubernetes services, and deployment and management of Prometheus instances.
-icon: https://raw.githubusercontent.com/prometheus/prometheus.github.io/master/assets/prometheus_logo-cb55bb5c346.png
-engine: gotpl
 maintainers:
-  - name: vsliouniaev
-  - name: bismarck
-  - name: gianrubio
-    email: gianrubio@gmail.com
+  - name: Kritsada Thongchai
+    email: kritsadaksdtc@gmail.com
 name: prometheus-operator
-sources:
-  - https://github.com/coreos/kube-prometheus
-  - https://github.com/coreos/prometheus-operator
-  - https://coreos.com/operators/prometheus
-version: 8.16.1
-appVersion: 0.38.1
-tillerVersion: ">=2.12.0"
-home: https://github.com/coreos/prometheus-operator
+version: 1.0.0
+appVersion: v1.0.0
 keywords:
 - operator
 - prometheus
+
 dependencies:
-  - name: prometheus-operator
-    version: "8.16.1"
+  - name: prometheus
+    version: "11.7.0"
+    repository: https://kubernetes-charts.storage.googleapis.com/
+  - name: grafana
+    version: "5.4.0"
     repository: https://kubernetes-charts.storage.googleapis.com/
